--- a/home.css
+++ b/home.css
@@ -11,9 +11,10 @@
     line-height: 1.5;
     background-color: #f9f9f9;
   }
-  
-  h1, h2, h3 {
+
+   h1,h2, h3 {
     margin-bottom: 10px;
+    text-align: center;
   }
   
   a {
@@ -45,7 +46,8 @@
   
   /* Banner */
   #banner img {
-    width: 100%;
+    width: 900px;
+    height: 500px;
     height: auto;
   }
   
