--- a/register.css
+++ b/register.css
@@ -3,17 +3,33 @@ body{
     padding: 0;
 }
 header {
-    background-color: orangered;
+    background-color: #333;
     color: #fff;
-}
-h3{
+    padding: 20px;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin-right: 10px;
+  }
+  
+  nav a {
+    color: #fff;
+  }
+.center h3{
     text-align: center;
 }
 .register{
     font-family: 'Times New Roman', Times, serif;
     position: absolute;
-     top: 50%; /*change garna parxa */
-    left: 50%; /*change garna parxa */
+     top: 35%; 
+    left: 40%; 
     border: 1px;
     border-style: solid;
     border-color: black;
