--- a/login.css
+++ b/login.css
@@ -22,12 +22,12 @@ header {
   nav a {
     color: #fff;
   }
-  
+
 .center{
     font-family: 'Times New Roman', Times, serif;
     position: absolute;
-    top: 35%;/*change garna parxa */
-    left: 45%; /*change garna parxa */
+    top: 35%;
+    left: 45%; 
     border: 1px;
     border-style: solid;
     border-color: black;
