--- a/home.css
+++ b/home.css
@@ -28,13 +28,14 @@
     color: #fff;
     padding: 20px;
   }
+  /* logo img */
   #logo{
     position: absolute;
     width: 250px;
     height: auto;
 
   }
-  
+   
   nav ul {
     list-style: none;
     margin: 0;
@@ -49,6 +50,32 @@
   nav a {
     color: #fff;
   }
+ /* ul{
+  list-style: none;
+ } 
+ ul li{
+  display: inline;
+  position:relative;
+ }
+ ul li a{
+  display: block; 
+  padding: 20px 25px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+ }
+ ul li ul.dropdown li{
+  display: block;
+ }
+ ul li ul.dropdown{
+  width:100%;
+  z-index: 999;
+  display: none;
+ }
+ ul li a:hover ul.dropdown{
+  display: block;
+
+ }  */
   
   /* Banner */
   #banner img {
