--- a/home.css
+++ b/home.css
@@ -36,6 +36,8 @@
   }
   .cat1{
     float: left;
+    height: 100px;
+    width: 100px;
   }
   #li1{
     float: right;
@@ -85,6 +87,7 @@
   
   .product img {
     width: 100%;
+    height: 100%;
     height: auto;
     margin-bottom: 10px;
   }
@@ -110,39 +113,6 @@
   }
   
   /* Featured Categories */
-  #categories {
-    margin: 20px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .category {
-    width: calc(50% - 20px);
-    margin-bottom: 20px;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .category img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-  }
-  
-  .category h3 {
-    font-size: 18px;
-    margin-bottom: 5px;
-  }
-  
-  .category a {
-    display: inline-block;
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-  }
   
   /* Testimonials */
   #testimonials {
